syntax = "proto3";

package provision;

import "database/postgres.proto";
import "deployment/deployment.proto";
import "edge/edge.proto";
import "validate/validate.proto";

option go_package = "github.com/stroppy-io/hatchet-workflow/internal/proto/provision";


message ContainerPort {
    string name = 1 [(validate.rules).string.min_len = 1];
    uint32 container_port = 2 [(validate.rules).uint32 = {gte: 1, lte: 65535}];
    optional uint32 host_port = 3 [(validate.rules).uint32 = {gte: 1, lte: 65535}];
}

// Runtime container contract used by compose renderer.
message Container {
    message PostgresRuntime {
        enum Role {
            ROLE_UNSPECIFIED = 0;
            ROLE_MASTER = 1;
            ROLE_REPLICA = 2;
        }

        Role role = 1 [(validate.rules).enum.defined_only = true];
        database.Postgres.Settings settings = 2 [(validate.rules).message.required = true];
        uint32 replica_index = 3; // 0-based for replicas; ignored for master
    }

    message EtcdRuntime {
        uint32 cluster_size = 1 [(validate.rules).uint32 = {in: [1, 3, 5]}];
        uint32 node_index = 2 [(validate.rules).uint32 = {gte: 1, lte: 5}]; // 1-based member index
        optional uint32 base_client_port = 3 [(validate.rules).uint32 = {gte: 1, lte: 65535}];
        optional uint32 peer_port = 4 [(validate.rules).uint32 = {gte: 1, lte: 65535}];
    }

    message PgbouncerRuntime {
        database.Postgres.PgbouncerConfig config = 1 [(validate.rules).message.required = true];
    }

    message NodeExporterRuntime {
        bool enabled = 1;
        uint32 port = 2;
    }

    message PostgresExporterRuntime {
        bool enabled = 1;
        uint32 port = 2;
        repeated string custom_queries_paths = 3;
    }

    message PgbouncerExporterRuntime {
        bool enabled = 1;
        uint32 port = 2;
    }

    message BackupRuntime {
        database.Postgres.BackupConfig config = 1 [(validate.rules).message.required = true];
    }

    string id = 1 [(validate.rules).string.min_len = 1];
    string name = 2 [(validate.rules).string.min_len = 1];
    string image = 3 [(validate.rules).string.min_len = 1];
    repeated string command = 4;
    repeated string args = 5;
    map<string, string> env = 6;
    repeated ContainerPort ports = 7;
    repeated string volumes = 8;
    bool monitor = 9;
    map<string, string> metadata = 10;

    oneof runtime {
        option (validate.required) = true;
        PostgresRuntime postgres = 101;
        EtcdRuntime etcd = 102;
        PgbouncerRuntime pgbouncer = 103;
        NodeExporterRuntime node_exporter = 104;
        PostgresExporterRuntime postgres_exporter = 105;
        PgbouncerExporterRuntime pgbouncer_exporter = 106;
        BackupRuntime backup = 107;
    }
}

message PlacementIntent {
    message Item {
        string name = 2 [(validate.rules).string.min_len = 1];
        deployment.Hardware hardware = 3 [(validate.rules).message.required = true];
        repeated Container containers = 4 [(validate.rules).repeated.min_items = 1];
        map<string, string> metadata = 5;
        deployment.Ip internal_ip = 6;
    }
    repeated Item items = 1 [(validate.rules).repeated.min_items = 1];
    deployment.Network network = 2 [(validate.rules).message.required = true];
    string connection_string = 3 [(validate.rules).string.min_len = 1];
}

message Placement {
    message Item {
        string name = 2 [(validate.rules).string.min_len = 1];
        repeated Container containers = 3 [(validate.rules).repeated.min_items = 1];
        deployment.Vm.Template vm_template = 4 [(validate.rules).message.required = true];
        edge.Worker worker = 5 [(validate.rules).message.required = true];
        map<string, string> metadata = 6;
    }
    deployment.Deployment.Template deployment_template = 1 [(validate.rules).message.required = true];
    repeated Item items = 2 [(validate.rules).repeated.min_items = 1];
    deployment.Network network = 3 [(validate.rules).message.required = true];
    string connection_string = 4 [(validate.rules).string.min_len = 1];
}

message DeployedPlacement {
    message Item {
        Placement.Item placement_item = 1 [(validate.rules).message.required = true];
        deployment.Vm vm = 2 [(validate.rules).message.required = true];
    }
    repeated Item items = 1 [(validate.rules).repeated.min_items = 1];
    deployment.Deployment deployment = 2 [(validate.rules).message.required = true];
    deployment.Network network = 3 [(validate.rules).message.required = true];
    string connection_string = 4 [(validate.rules).string.min_len = 1];
}
